syntax = "proto3";
package booking;

message Booking{
    int32 seatNumber = 1;
    string passengerName = 2;
}

message Passenger{
    string name = 1;
}
service TicketService{
    rpc BookTicket(Passenger) returns (Booking){}
}